# tiny_discord_bot

./: .gitignore  Cargo.toml  README.md  invites.txt
assets/: english.pest
src/: asset_manager.rs  autocomplete.rs  commands.rs  data.rs  error.rs  event_handler.rs  fake_user.rs  fuzzy.rs  log.rs  logger.rs  main.rs  serde.rs  util.rs
src/commands/: char_add.rs  char_list.rs  char_use.rs  help.rs  info.rs  save.rs
src/commands/char/: char_add.rs  char_list.rs  char_remove.rs  char_use.rs  mod.rs
src/commands/config/: config_get.rs  config_set.rs  mod.rs
src/data/: servers.rs
