[package]
name = "tiny_discord_bot"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
#lazy_static = "1.5"
#chrono = "0.4"
poise = "0.6"
tokio = { version = "1.44", features = ["rt", "rt-multi-thread", "macros"] }
serde = "1.0"
serde_yml = "0.0"
anyhow = "1.0"
pest = "2.8"
pest_derive = "2.8"
