[package]
name = "tiny_discord_bot"
version = "1.1.0"
edition = "2024"
resolver = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
#lazy_static = "1.5"
#chrono = "0.4"
poise = "0.6"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync"] }
serde = "1.0"
serde_yml = "0.0"
ctrlc = { version = "3.4", features = ["termination"] }
const_format = "0.2"
#pretty_yaml = "0.5"
#pest = "2.8"
#pest_derive = "2.8"
chrono = "0.4"
log = "0.4.27"
lazy_static = "1.5.0"
strsim = "0.11"
#arc-swap = "1.7"
indoc = "2"
